--- a/1-6_exercise/index.html
+++ b/1-6_exercise/index.html
@@ -5,5 +5,11 @@
     <link rel="stylesheet"href="style.css"/>
     <title>1-6_exercise</title>
   </head>
+  <body>
+   <div class="box1"></div>
+   <div class="box2"></div>
+   <div class="box3"></div>
+   <div class="box4"></div>
+  </body>
   
 </html>
